src/test/deca/context/invalid/return_01.deca
// Description:
//    Essaie de retourner un type différent de celui annoncé dans la signature d'une méthode
//
// Resultats:
//    Ligne 16: Le type de l'expression est float alors que le type attendu est int
//
// Historique:
//    cree le 21/01/2023
class A {
    protected int x;
    float z;
    int getX() {
        return x ;
    }
    int getZ() {
        return z ;
    }
}

